# film-scanning-tool

./: .gitignore  __main__.py  flake.nix  hello.py  pyproject.toml  pyrightconfig.json  shell.nix
edsdk-module/: .gitignore  CMakeLists.txt  default.nix  edsdk.i  edsdk.py  setup.py
edsdk-module/include/: EDSDKTypes.h
edsdk-module/src/: bindings.cpp
include/: EDSDK.h  EDSDKTypes.h  EDSDK_preprocessed.h  edsdk_fix.h
src/: plots.py
src/cli/: app.py  log_handler.py
src/core/: __init__.py  camera.py  command.py  edsdk.py  eospy.py  exception.py  image.py  property.py  session.py  tools.py
src/model/: caption.py  correlation.py  edge.py  feature.py
